# agentic-reasoning_V2

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: agentic_reasoning.ipynb  tests_bapt.ipynb
sou/agents/: code_agent.py  graphrag_agent.py  research_agent.py
sou/benchmark/: prompt_manager.py
sou/benchmark/data/: sample_submission.csv  test.csv  train.csv
sou/models/: embedding_model.py  generation_model.py
sou/prompt/: config.py  prompt_manager.py
sou/prompt/utils/: extract_pattern.py
sou/reasoning/: run_generation.py  run_reasoning.py
